# glucochef

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml  prompts.md  readme.md
.devin/rules/: tdd-red-green.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ecfa417d02a_init_schema.py  9fc8fec44ae1_init_schema.py  e3d89e75cb1c_add_consent_audit_action.py
backend/app/: main.py
backend/app/ai/: provider.py
backend/app/api/routes/: ingredients.py  labs.py  onboarding.py  recipes.py  suggestions.py
backend/app/core/: audit.py  config.py  crypto.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit_log_entry.py  enums.py  lab_result.py  nutritional_profile.py  patient.py  recipe.py  rejected_ingredient.py  suggestion.py
backend/app/repositories/: rejected_ingredient.py
backend/app/schemas/: labs.py  onboarding.py
backend/app/services/: labs.py  recommendations.py
backend/glucochef_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_ai_provider.py  test_audit_log.py  test_ingredients.py  test_labs.py  test_labs_service.py  test_onboarding.py  test_patient_model.py  test_phi_encryption.py  test_recipes.py  test_recommendations.py  test_security.py  test_suggestions.py
docs/: erd.md  glucochef-prd.md  product-doc.md  user-stories.md
docs/architecture/: README.md  glucochef.c4
frontend/: .env.example  pnpm-lock.yaml
memory-bank/: ai-usage-notes.md  decisions.md  product-context.md  project-brief.md
(+16 files in other folders)
